Version 2.0.5 -Fixed overflow?

--- a/client/src/Styleshseets/style.scss
+++ b/client/src/Styleshseets/style.scss
@@ -15,6 +15,7 @@ body {
 .cottage-app {
   position: relative;
   overflow: hidden;
+  overflow-y: hidden;
 }
 
 .login {
